# ChangeLog for net-www/squidalyser
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/squidalyser/Attic/ChangeLog,v 1.2 2003/02/12 08:53:16 vapier Exp $

*squidalyser-0.2.55 (22 Dec 2002)

  22 Dec 2002; Michael Cummings <mcummings@gentoo.org>
  squidalyser-0.2.55.ebuild:

  Initial import.  Ebuild submitted by bnelson@itministry.org (Brian
  Nelson) in bug 10111.