@@ -1,3 +1,3 @@
-MD5 afe401a308e9934fb4eed9650fffce71 squidalyser-0.2.55.ebuild 2750
-MD5 74b144a5b23e036e887ae5fe89ce2edc ChangeLog 433
+MD5 d71cd02fa58d3724455baee71799c8c6 squidalyser-0.2.55.ebuild 2750
+MD5 8ab371fbcf98e9f658d45ce687f4d546 ChangeLog 641
 MD5 4f1639f87240e891fee9650bce40b831 files/digest-squidalyser-0.2.55 145
