@@ -1,1 +1,2 @@
 MD5 3326f6ebd4454d885ab9d19eb03fec19 squidalyser-0.2.55.tar.gz 32519
+MD5 aa0300c38389749708b551d2437fa9ea squidalyser-0.2.55-gentoo.diff.bz2 711
