@@ -1,8 +1,13 @@
 # ChangeLog for net-www/squidalyser
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/squidalyser/Attic/ChangeLog,v 1.2 2003/02/12 08:53:16 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/squidalyser/Attic/ChangeLog,v 1.3 2003/04/18 18:17:11 seemant Exp $
 
 *squidalyser-0.2.55 (22 Dec 2002)
+
+  18 Apr 2003; Seemant Kulleen <seemant@gentoo.org> Manifest,
+  squidalyser-0.2.55.ebuild:
+  added missing patch from the original submission. Thanks to: Alberto Ornaghi
+  <alor@antifork.org> in bug #19534
 
   22 Dec 2002; Michael Cummings <mcummings@gentoo.org>
   squidalyser-0.2.55.ebuild:
